--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
         >
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label"
-              >Nombre del profesor</label
+              >Nombre del Usuario</label
             >
             <input
               type="text"
@@ -51,7 +51,7 @@
           </div>
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label"
-              >Email del profesor</label
+              >Email del Usuario</label
             >
             <input
               type="email"
